<resources>
    <string name="app_name">FeelsBook</string>
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> 6d74b44f3486004da67dc057219594c558861e45
=======
>>>>>>> 6d74b44f3486004da67dc057219594c558861e45
    <string name="map">MAP</string>
    <string name="feed">FEED</string>
    <string name="confirm">CONFIRM</string>
    <string name="app_title">FeelsBook</string>
    <string name="sign_up_msg">Don\'t have an account? Sign up</string>
    <string name="enter_account_details">Enter account details:</string>
    <string name="cancel">Cancel</string>
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> 600051d28804c10d8677ea7f1984eb319ea7cf40
=======
>>>>>>> 6d74b44f3486004da67dc057219594c558861e45
=======
>>>>>>> 6d74b44f3486004da67dc057219594c558861e45
    <string name="happy">&#128515;</string>
    <string name="sleepy">&#128564;</string>
    <string name="sad">&#128557;</string>
    <string name="angry">&#128544;</string>
    <string name="annoyed">&#128580;</string>
    <string name="sexy">&#127814;</string>
</resources>
